--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -102,51 +102,164 @@ jobs:
           push: true
           tags: lisaperevalova/foodgram_gateway:latest
 
+  # deploy:
+  #   runs-on: ubuntu-latest
+  #   needs: 
+  #     - build_and_push_to_docker_hub
+  #     - build_frontend_and_push_to_docker_hub
+  #     - build_gateway_and_push_to_docker_hub
+  #   steps:
+  #   - name: Checkout repo
+  #     uses: actions/checkout@v3
+  #   - name: Copy docker-compose.yml via ssh
+  #     uses: appleboy/scp-action@master
+  #     with:
+  #       host: ${{ secrets.HOST }}
+  #       username: ${{ secrets.USER }}
+  #       key: ${{ secrets.SSH_KEY }}
+  #       passphrase: ${{ secrets.SSH_PASSPHRASE }}
+  #       source: "docker-compose.production.yml"
+  #       target: "foodgram"
+  #   - name: Executing remote ssh commands to deploy
+  #     uses: appleboy/ssh-action@master
+  #     with:
+  #       host: ${{ secrets.HOST }}
+  #       username: ${{ secrets.USER }}
+  #       key: ${{ secrets.SSH_KEY }}
+  #       passphrase: ${{ secrets.SSH_PASSPHRASE }}
+  #       script: |
+  #         cd foodgram
+  #         # Выполняет pull образов с Docker Hub
+  #         sudo docker compose -f docker-compose.production.yml pull
+  #         # Перезапускает все контейнеры в Docker Compose
+  #         sudo docker compose -f docker-compose.production.yml down
+  #         sudo docker compose -f docker-compose.production.yml up -d
+  #         # Выполняет миграции и сбор статики
+  #         sudo docker compose -f docker-compose.production.yml exec backend python manage.py makemigrations
+  #         sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
+  #         sudo docker compose -f docker-compose.production.yml exec backend python manage.py load_ingredients
+  #         sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic
+  #         sudo docker compose -f docker-compose.production.yml exec backend cp -r /app/collected_static/. /backend_static/static/
+  # send_message:
+  #   runs-on: ubuntu-latest
+  #   needs: deploy
+  #   steps:
+  #   - name: Send message
+  #     uses: appleboy/telegram-action@master
+  #     with:
+  #       to: ${{ secrets.TELEGRAM_TO }}
+  #       token: ${{ secrets.TELEGRAM_TOKEN }}
+  #       message: Деплой успешно выполнен!
   deploy:
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: 
       - build_and_push_to_docker_hub
       - build_frontend_and_push_to_docker_hub
-      - build_gateway_and_push_to_docker_hub
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v3
-    - name: Copy docker-compose.yml via ssh
-      uses: appleboy/scp-action@master
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USER }}
-        key: ${{ secrets.SSH_KEY }}
-        passphrase: ${{ secrets.SSH_PASSPHRASE }}
-        source: "docker-compose.production.yml"
-        target: "foodgram"
-    - name: Executing remote ssh commands to deploy
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USER }}
-        key: ${{ secrets.SSH_KEY }}
-        passphrase: ${{ secrets.SSH_PASSPHRASE }}
-        script: |
-          cd foodgram
-          # Выполняет pull образов с Docker Hub
-          sudo docker compose -f docker-compose.production.yml pull
-          # Перезапускает все контейнеры в Docker Compose
-          sudo docker compose -f docker-compose.production.yml down
-          sudo docker compose -f docker-compose.production.yml up -d
-          # Выполняет миграции и сбор статики
-          sudo docker compose -f docker-compose.production.yml exec backend python manage.py makemigrations
-          sudo docker compose -f docker-compose.production.yml exec backend python manage.py migrate
-          sudo docker compose -f docker-compose.production.yml exec backend python manage.py load_ingredients
-          sudo docker compose -f docker-compose.production.yml exec backend python manage.py collectstatic
-          sudo docker compose -f docker-compose.production.yml exec backend cp -r /app/collected_static/. /backend_static/static/
+      - name: Check out the repo
+        uses: actions/checkout@v3
+
+      - name: Create project structure and copy files
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          passphrase: ${{ secrets.SSH_PASSPHRASE }}
+          script: |
+            # Создаем необходимые директории
+            mkdir -p foodgram/docs
+            mkdir -p foodgram/frontend
+            mkdir -p foodgram/infra
+
+      - name: Copy project files
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          passphrase: ${{ secrets.SSH_PASSPHRASE }}
+          source: "infra/docker-compose.yml,infra/default.conf,docs/openapi-schema.yml,docs/redoc.html"
+          target: "foodgram/"
+          strip_components: 1
+
+      - name: Setup environment and deploy
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          passphrase: ${{ secrets.SSH_PASSPHRASE }}
+          script: |
+            cd foodgram/
+            # Перемещаем файлы в нужные директории
+            mv openapi-schema.yml docs/
+            mv redoc.html docs/
+            mv docker-compose.yml infra/
+            mv default.conf infra/
+            
+            # Создаем и настраиваем .env файл
+            cd infra/
+            sudo touch .env
+            echo DB_ENGINE=django.db.backends.postgresql >> .env
+            echo POSTGRES_DB=${{ secrets.DB_NAME }} >> .env
+            echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
+            echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
+            echo DB_HOST=db >> .env
+            echo DB_PORT=5432 >> .env
+            echo SECRET_KEY="${{ secrets.SECRET_KEY }}" >> .env
+            echo ALLOWED_HOSTS=${{ secrets.ALLOWED_HOSTS }} >> .env
+            echo DEBUG=False >> .env
+            
+            # Запускаем контейнеры
+            sudo docker compose down
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:latest
+            sudo docker compose up -d
+
+      - name: Execute database commands
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_KEY }}
+          passphrase: ${{ secrets.SSH_PASSPHRASE }}
+          script: |
+            cd foodgram/infra/
+            
+            # Ждем, пока база данных станет доступной
+            echo "Waiting for database to be ready..."
+            sleep 30
+            
+            # Проверяем доступность базы данных
+            until sudo docker compose exec -T db pg_isready -U ${{ secrets.POSTGRES_USER }} -d ${{ secrets.DB_NAME }}; do
+              echo "Database is unavailable - sleeping"
+              sleep 2
+            done
+            
+            echo "Database is up - executing commands"
+                             
+            # Выполняем миграции и другие команды
+            sudo docker compose exec -T backend python manage.py makemigrations
+            sudo docker compose exec -T backend python manage.py migrate
+            sudo docker compose exec -T backend python manage.py collectstatic --no-input
+            sudo docker compose exec -T backend python manage.py create_tags
+            sudo docker compose exec -T backend python manage.py load_ingredients data/ingredients.json
+            sudo docker compose exec -T backend python manage.py create_users
+            sudo docker compose exec -T backend python manage.py create_recipes
+
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
     steps:
-    - name: Send message
-      uses: appleboy/telegram-action@master
-      with:
-        to: ${{ secrets.TELEGRAM_TO }}
-        token: ${{ secrets.TELEGRAM_TOKEN }}
-        message: Деплой успешно выполнен!
+      - name: Send message
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_TO }}
+          token: ${{ secrets.TELEGRAM_TOKEN }}
+          message: |
+            Деплой Foodgram успешно завершен!
+            Коммит: ${{ github.event.head_commit.message }}
+            Ветка: ${{ github.ref }}
+            Автор: ${{ github.actor }}
