--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -135,11 +135,11 @@ jobs:
           sudo docker compose -f docker-compose.production.yml down
           sudo docker compose -f docker-compose.production.yml up -d
           # Выполняет миграции и сбор статики
-          sudo docker compose -f docker-compose.production.yml exec foodgram_backend python manage.py makemigrations
-          sudo docker compose -f docker-compose.production.yml exec foodgram_backend python manage.py migrate
-          sudo docker compose -f docker-compose.production.yml exec foodgram_backend python manage.py load_ingredients
-          sudo docker compose -f docker-compose.production.yml exec foodgram_backend python manage.py collectstatic
-          sudo docker compose -f docker-compose.production.yml exec foodgram_backend cp -r /app/collected_static/. /backend_static/static/
+          sudo docker compose -f docker-compose.production.yml exec foodgram-backend-1 python manage.py makemigrations
+          sudo docker compose -f docker-compose.production.yml exec foodgram-backend-1 python manage.py migrate
+          sudo docker compose -f docker-compose.production.yml exec foodgram-backend-1 python manage.py load_ingredients
+          sudo docker compose -f docker-compose.production.yml exec foodgram-backend-1 python manage.py collectstatic
+          sudo docker compose -f docker-compose.production.yml exec foodgram-backend-1 cp -r /app/collected_static/. /backend_static/static/
   send_message:
     runs-on: ubuntu-latest
     needs: deploy
