--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,23 @@ version: '3.3'
 services:
 
   frontend:
-    container_name: foodgram-front
+    container_name: foodgram_frontend
     build: ../frontend
     volumes:
       - ../frontend/:/app/result_build/
-  nginx:
-    container_name: foodgram-proxy
+  db:
+    container_name: foodgram_gateway
     image: nginx:1.25.4-alpine
     ports:
-      - "80:80"
+      - "8500:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+   backend:
+    container_name: foodgram_backend
+    build: ./backend/
+    env_file: .env
+    volumes:
+      - static:/backend_static/
+      - media:/app/media
