--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,5 +1,3 @@
-version: '3'
-
 volumes:
   pg_data:
   static:
@@ -23,7 +21,7 @@ services:
     image: lisaperevalova/foodgram_frontend
     command: cp -r /app/build/. /frontend_static/
     volumes:
-      - static_volume:/frontend_static/
+      - static:/frontend_static
   gateway:
     image: lisaperevalova/foodgram_gateway
     env_file: .env
