--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     build: ../frontend
     volumes:
       - ../frontend/:/app/result_build/
-  db:
+  nginx:
     container_name: foodgram_gateway
     image: nginx:1.25.4-alpine
     ports:
@@ -15,10 +15,27 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
-   backend:
-    container_name: foodgram_backend
-    build: ./backend/
-    env_file: .env
-    volumes:
-      - static:/backend_static/
-      - media:/app/media
+# version: '3.3'
+# services:
+
+#   frontend:
+#     container_name: foodgram_frontend
+#     build: ../frontend
+#     volumes:
+#       - ../frontend/:/app/result_build/
+#   db:
+#     container_name: foodgram_gateway
+#     image: nginx:1.25.4-alpine
+#     ports:
+#       - "8500:80"
+#     volumes:
+#       - ./nginx.conf:/etc/nginx/conf.d/default.conf
+#       - ../frontend/build:/usr/share/nginx/html/
+#       - ../docs/:/usr/share/nginx/html/api/docs/
+#    backend:
+#     container_name: foodgram_backend
+#     build: ./backend/
+#     env_file: .env
+#     volumes:
+#       - static:/backend_static/
+#       - media:/app/media
