--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
 
   frontend:
     container_name: foodgram_frontend
-    build: ../frontend
+    build: ./frontend
     volumes:
       - ../frontend/:/app/result_build/
   nginx:
