--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,11 +1,17 @@
-FROM python:3.9
+# Используем официальный образ Python
+FROM python:3.9-slim
 
+# Устанавливаем рабочую директорию в /app
 WORKDIR /app
 
-COPY requirements.txt .
+# Копируем все файлы из текущей директории в контейнер
+COPY . /app/
 
-RUN pip install -r /app/requirements.txt --no-cache-dir
+# Устанавливаем зависимости
+RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . .
+# Открываем порт, на котором будет работать приложение
+EXPOSE 8500
 
-CMD ["gunicorn", "--bind", "0.0.0.0:8500", "foodgram.wsgi"]
+# Запускаем приложение с использованием Gunicorn
+CMD ["gunicorn", "--bind", "0.0.0.0:8500", "foodgram.wsgi:application"]
